tests/compile-fail/unknown_feature.stderr
error: unknown feature
 --> tests/compile-fail/unknown_feature.rs:6:14
  |
6 | #[enum_tools(unknown1)]
  |              ^^^^^^^^
